--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,25 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+
+
+        <string-array name="hours_array">
+            <item>0</item>
+            <item>1</item>
+            <item>2</item>
+            <item>3</item>
+            <item>4</item>
+        </string-array>
+
+        <string-array name="minutes_array">
+            <item>0</item>
+            <item>10</item>
+            <item>20</item>
+            <item>30</item>
+            <item>40</item>
+            <item>50</item>
+        </string-array>
+
+
 </resources>
